# drugbank-downloader

./: .bumpversion.cfg  .cruft.json  .gitignore  CITATION.cff  MANIFEST.in  README.md  example.xml  pyproject.toml  setup.cfg  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: tests.yml
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/drugbank_downloader/: __init__.py  __main__.py  api.py  cli.py  version.py
tests/: __init__.py  test_version.py
