##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = drugbank_downloader
version = 0.0.1
description = Write scripts that can get drugbank data without redistributing it
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/cthoyt/drugbank_downloader
download_url = https://github.com/cthoyt/drugbank_downloader/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/drugbank_downloader/issues

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords =
    caching
    file management

[options]
install_requires =
    pystow>=0.0.4
    click

zip_safe = false
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
bioversions =
    bioversions

[options.entry_points]
console_scripts =
    drugbank_downloader = drugbank_downloader.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = drugbank_downloader
omit =
    tests/*
    docs/*
    src/drugbank_downloader/cli.py
    src/drugbank_downloader/__main__.py

[coverage:paths]
source =
    src/drugbank_downloader
    .tox/*/lib/python*/site-packages/drugbank_downloader

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
